@@ -1,6 +1,7 @@
 2025-03-XX   3.2.0:
 -------------------
   * add `util.xor_indices()`, #229
+  * add Hamming code example
 
 
 2025-03-06   3.1.1:
